--- a/src/pages/landing/index.scss
+++ b/src/pages/landing/index.scss
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     height: 641px;
-    justify-content: spa;
+    justify-content: space-between;
     gap: 80px;
 }
