--- a/src/components/todayDashboad/index.scss
+++ b/src/components/todayDashboad/index.scss
@@ -1,6 +1,34 @@
 @use 'src/base.scss';
 
 .todayDashboard-container {
-    @include base.main-dashboard;
-    height: 150px;
+	@include base.main-dashboard;
+	height: 250px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+
+	&__hour {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+		width: 60px;
+		height: 100px;
+		border-radius: 10px;
+		box-shadow: rgb(0 0 0 / 7%) 0px 1px 2px, rgb(0 0 0 / 7%) 0px 2px 4px,
+			rgb(0 0 0 / 7%) 0px 4px 8px, rgb(0 0 0 / 7%) 0px 8px 16px,
+			rgb(0 0 0 / 7%) 0px 16px 32px, rgb(0 0 0 / 7%) 0px 32px 64px;
+	}
+
+	img {
+		width: 50px;
+		height: auto;
+	}
+
+    p {
+        @include base.main-text;
+        font-size: 0.8rem;
+        margin: 0px;
+        text-align: center;
+    }
 }
