--- a/src/base.scss
+++ b/src/base.scss
@@ -1,21 +1,35 @@
 @mixin main-backgound {
-    background: #253042;
+	background: #253042;
 }
 
 @mixin main-background-active {
-    background: #314667;
+	background: #314667;
 }
 
 @mixin main-text {
-    color: #ABAEB2;
-    font-family: Arial, Helvetica, sans-serif;
+	color: #abaeb2;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 @mixin main-line {
-    color: #414b58;
+	color: #414b58;
 }
 
 @mixin main-dashboard {
-    background: #253042;
-    border-radius: 20px;
+	background: #253042;
+	border-radius: 20px;
+}
+
+//media queries
+@mixin devices($device) {
+	@if $device == mobile {
+		@media only screen and (max-width: 600px) {
+			@content;
+		}
+	}
+	@if $device == tablet {
+		@media only screen and (max-width: 680px) {
+			@content;
+		}
+	}
 }
