--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,17 +1,23 @@
+@use 'src/base.scss';
+
 .layout-container {
 	margin: 0 auto;
 	width: 100vw;
-	height: 100vh;
-	max-width: 1920px;
-	max-height: 1080px;
 	background: #0b131e;
-	display: flex;
 
 	&__children {
 		display: flex;
 		flex-direction: column;
-		width: 1000px;
-		gap: 30px;
-		margin: 50px;
+		align-items: center;
+		padding: 50px 0 50px 0;
+		margin: 0 auto;
+		width: 800px;
+		gap: 50px;
+		@include base.devices(tablet) {
+			width: 600px;
+		}
+		@include base.devices(mobile) {
+			width: 350px;
+		}
 	}
 }
