--- a/src/components/tempCard/index.scss
+++ b/src/components/tempCard/index.scss
@@ -11,10 +11,16 @@
 	box-shadow: rgb(0 0 0 / 7%) 0px 1px 2px, rgb(0 0 0 / 7%) 0px 2px 4px,
 		rgb(0 0 0 / 7%) 0px 4px 8px, rgb(0 0 0 / 7%) 0px 8px 16px,
 		rgb(0 0 0 / 7%) 0px 16px 32px, rgb(0 0 0 / 7%) 0px 32px 64px;
+	@include base.devices(mobile) {
+		width: 60px;
+	}
 
 	img {
 		width: 50px;
 		height: auto;
+		@include base.devices(mobile) {
+			width: 45px;
+		}
 	}
 
 	p {
