--- a/src/pages/landing/index.scss
+++ b/src/pages/landing/index.scss
@@ -1,7 +1,6 @@
 .landing-container {
     display: flex;
     flex-direction: column;
-    height: 641px;
-    justify-content: space-between;
     align-items: center;
+    gap: 20px;
 }
