--- a/src/base.scss
+++ b/src/base.scss
@@ -1,3 +1,32 @@
+//dark mode
+@mixin text-dark($size) {
+	color: antiquewhite;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	line-height: 1.2;
+	@if($size == lg) {
+		font-size: 2.25rem;
+	}
+	@if($size == md) {
+		font-size: 1.5rem;
+	}
+	@if($size == sm_1) {
+		font-size: 1.125rem;
+	}
+	@if($size == sm_2) {
+		font-size: 0.875rem;
+	}
+} 
+
+//general
+@mixin viewport {
+	width: 100%;
+	max-width: 1200px;
+	@media only screen and (max-width: 680px) {
+		max-width: 300px;
+	}
+}
+
 @mixin main-backgound {
 	background: #253042;
 }
