--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -3,21 +3,12 @@
 .layout-container {
 	margin: 0 auto;
 	width: 100vw;
+	height: 100vh;
 	background: #0b131e;
 
 	&__children {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding: 50px 0 50px 0;
-		margin: 0 auto;
-		width: 800px;
-		gap: 50px;
-		@include base.devices(tablet) {
-			width: 600px;
-		}
-		@include base.devices(mobile) {
-			width: 350px;
-		}
 	}
 }
