--- a/src/pages/landing/current/index.scss
+++ b/src/pages/landing/current/index.scss
@@ -18,18 +18,31 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap:5px;
+		gap: 5px;
 
 		p {
 			margin: 0;
 			@include base.text-dark(sm_1);
 		}
 	}
-	
+
 	&__tempInfo {
 		width: 300px;
 		height: 90px;
 		background: rgba(255, 255, 255, 0.3);
 		border-radius: 20px;
+		display: flex;
+		flex-direction: column;
+		@include base.text-dark(sm_2);
+
+		&__info-1 {
+			display: flex;
+			justify-content: space-around;
+		}
+
+		&__info-2 {
+			display: flex;
+			justify-content: center;
+		}
 	}
 }
